--- a/Background/style.css
+++ b/Background/style.css
@@ -114,7 +114,7 @@ body{
     background-color: blanchedalmond;
     background-position: right bottom;
 }
-
+/* Basic-gradient */
 .linear{
     width: 200px;
     height: 150px;
@@ -131,5 +131,14 @@ body{
     width: 200px;
     height: 150px;
     background: conic-gradient(from 45deg,white, #1024d4, red);
+}
 
+.fixed{
+    width: 100%;
+    height: 200px;
+    background-image: url( https://habsida-lms.s3.ap-northeast-2.amazonaws.com/webcore/logo.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
 }
